Stopped text from wrapping, set image size(400x600), moved js into js/index.js

--- a/css/index.css
+++ b/css/index.css
@@ -20,3 +20,12 @@ body {
 #login{
   margin-top: -8px;
 }
+
+h3 {
+  font-size: 20px;
+}
+
+#picture{
+  width: 600;
+  height: 400;
+}
